--- a/styles/general.css
+++ b/styles/general.css
@@ -5,7 +5,9 @@ h2 {color:green;}
 .link {font-size: 30px;
        text-align: center;
 }
-
+button{
+       background-color: yellow
+}
 #tom {
       font-size: 20px;
       color: red;
