--- a/styles/general.css
+++ b/styles/general.css
@@ -5,6 +5,11 @@ h2 {color:green;}
 .link {font-size: 30px;
        text-align: center;
 }
+button {
+       background-color: yellow;
+       height: 50px
+       width: 50px
+}
 
 #tom {
       font-size: 20px;
