--- a/styles/general.css
+++ b/styles/general.css
@@ -7,8 +7,8 @@ h2 {color:green;}
 }
 button {
        background-color: yellow;
-       height: 50px
-       width: 50px
+       height: 50px;
+       width: 50px;
 }
 
 #tom {
