--- a/styles/general.css
+++ b/styles/general.css
@@ -5,7 +5,7 @@ h2 {color:green;}
 .link {font-size: 30px;
        text-align: center;
 }
-.add to car-button {
+.add to cart-button {
        background-color: yellow;
        height: 50px;
        width: 105px;
