--- a/styles/general.css
+++ b/styles/general.css
@@ -12,6 +12,8 @@ h2 {color:green;}
        border-radius: 2px;
        cursor: pointer;
        border: none;
+       color: white;
+            
 }
 
 
