--- a/styles/general.css
+++ b/styles/general.css
@@ -1,6 +1,9 @@
 
 h1 {color:red;}
-h2 {color:green;}
+h3 {color:green;}
+h2 [font-size: 30px;}
+h3 [font-size: 15px;}
+
 
 .link {font-size: 30px;
        text-align: center;
