--- a/styles/general.css
+++ b/styles/general.css
@@ -8,7 +8,7 @@ h3 [font-size: 15px;}
 .link {font-size: 30px;
        text-align: center;
 }
-     button {
+     .add-button {
        background-color: yellow;
        height: 38px;
        width: 85px;
@@ -19,6 +19,8 @@ h3 [font-size: 15px;}
             
 }
 
+<button class= "add-button" >
+    Add to Cart</button>
 
 #tom {
       font-size: 20px;
