--- a/general.css
+++ b/general.css
@@ -16,6 +16,9 @@ h2 {color:green;}
                         margin-right: 8px;
                         transition: opacity 0.15s;
                     }
+button class= "add-button" >
+    Add to Cart</button>                
+   
 
 #tom {
       font-size: 20px;
